--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,11 @@ erl_crash.dump
 # Ignore package tarball (built via "mix hex.build").
 kl_challenge_factorial-*.tar
 
+# Ignore .un~
+*.un~
+
+#Ignore swp
+*.swp
 
 # Temporary files for e.g. tests
 /tmp
