--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,11 @@ erl_crash.dump
 # Ignore package tarball (built via "mix hex.build").
 number_compare-*.tar
 
+#Ignore swp
+*.swp
+
+#Ignore un~
+*.un~
 
 # Temporary files for e.g. tests
 /tmp
